--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "deploy": "npm run build && scp -r ./dist/* root@web.herewallet.app:/var/www/here-www",
+    "deploy": "npm run build && sh ./deploy.sh",
     "build": "parcel build ./landing/index.pug",
     "start": "parcel ./landing/index.pug"
   },
