--- a/.pugrc
+++ b/.pugrc
@@ -54,23 +54,23 @@
     "main": {
       "title": "Your familiar<br/>finance app<br/>built on WEB3",
       "qrcode": "/assets/QR/qr.gold.svg",
-      "qrcodeLocale": "Scan the code to open iOS app and get 0.5$",
+      "qrcodeLocale": "Scan to start HERE",
       "poweredbynear": "Powered by NEAR Protocol",
       "scrolldown": "Scroll down to learn more"
     },
     "floatqr": {
       "qrcode": "/assets/QR/qr.gold.svg",
-      "qrcodeLocale": "Scan the code and get 0.5$"
+      "qrcodeLocale": "Scan to start HERE"
     },
     "features": [
       {
-        "title": "Phone number transfers",
+        "title": "Transfers via phone number",
         "moreLink": "",
         "moreLocale": "Try it out",
         "backPicture": "/assets/Graphics/orange.svg",
         "frontPicture": "/assets/Screens/transfers.png",
         "items": [
-          "Pay your friends all over the world 0% commission",
+          "Pay your friends all over the world with 0% fee",
           "Transfer money even to those who don't have a wallet yet",
           "No tax notice"
         ]
@@ -82,10 +82,10 @@
         "backPicture": "/assets/Graphics/pink.svg",
         "frontPicture": "/assets/Screens/invest.png",
         "items": [
-          "Invest via transparent decentralized exchanges ",
-          "No paperwork needed to start investing",
+          "Invest through transparent decentralized exchanges",
+          "No paperwork is needed to start investing",
           "Buy one of the 20 most popular cryptocurrencies",
-          "Track your portfolio in an easy-to-use interface"
+          "Keep track of your portfolio with an easy-to-use interface"
         ]
       },
       {
@@ -95,7 +95,7 @@
         "backPicture": "/assets/Graphics/green.svg",
         "frontPicture": "/assets/Screens/overview.png",
         "items": [
-          "Withdraw money at any time with 0% commission",
+          "Withdraw money at any time with a 0% fee",
           "Use only decentralized protocols to make profit"
         ]
       }
