add santa tokens

--- a/.pugrc
+++ b/.pugrc
@@ -52,7 +52,7 @@
       ]
     },
     "main": {
-      "title": "Your familiar<br/>finance app<br/>built on WEB3",
+      "title": "Explore web3 with the handy features of web2 financial apps",
       "qrcode": "/assets/QR/qr.gold.svg",
       "qrcodeLocale": "Scan to<br />start HERE",
       "poweredbynear": "Powered by NEAR Protocol",
