--- a/package.json
+++ b/package.json
@@ -2,16 +2,30 @@
   "scripts": {
     "fetch": "node ./fetch-data.js",
     "deploy": "npm run build && sh ./deploy.sh",
-    "build": "npm run fetch && parcel build ./landing/index.pug",
-    "start": "npm run fetch && parcel ./landing/index.pug"
+    "build": "npm run fetch && parcel build ./landing/index.pug ./santa/index.pug",
+    "start": "npm run fetch && parcel ./landing/index.pug ./santa/index.pug"
   },
   "type": "module",
   "devDependencies": {
     "@parcel/transformer-pug": "^2.8.0",
     "@parcel/transformer-sass": "^2.8.0",
-    "parcel": "^2.8.0"
+    "buffer": "^5.7.1",
+    "parcel": "^2.8.0",
+    "process": "^0.11.10"
   },
   "dependencies": {
+    "@here-wallet/connect": "^0.2.1",
+    "@here-wallet/core": "^0.1.3",
+    "@near-wallet-selector/core": "^7.3.0",
+    "@near-wallet-selector/here-wallet": "^7.3.0",
+    "@near-wallet-selector/ledger": "^7.3.0",
+    "@near-wallet-selector/math-wallet": "^7.3.0",
+    "@near-wallet-selector/meteor-wallet": "^7.3.0",
+    "@near-wallet-selector/modal-ui-js": "^7.3.0",
+    "@near-wallet-selector/my-near-wallet": "^7.3.0",
+    "@near-wallet-selector/near-wallet": "^7.3.0",
+    "@near-wallet-selector/nightly": "^7.3.0",
+    "@near-wallet-selector/sender": "^7.3.0",
     "fetch": "^1.1.0",
     "node-fetch": "^3.3.0"
   }
