--- a/.pugrc
+++ b/.pugrc
@@ -42,8 +42,8 @@
           "link": "/howto"
         },
         {
-          "text": "Play to learn",
-          "link": "/stemmy"
+          "text": "Santa Token",
+          "link": "/santa"
         },
         {
           "text": "Docs",
