--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   "devDependencies": {
     "@parcel/transformer-pug": "^2.8.0",
     "@parcel/transformer-sass": "^2.8.0",
+    "@types/bn.js": "^5.1.1",
+    "@types/crypto-js": "^4.1.1",
+    "@types/uuid4": "^2.0.0",
     "buffer": "^5.7.1",
+    "fetch": "^1.1.0",
+    "node-fetch": "^3.3.0",
     "parcel": "^2.8.0",
     "process": "^0.11.10"
   },
   "dependencies": {
-    "@here-wallet/connect": "^0.2.1",
     "@here-wallet/core": "^0.1.3",
     "@near-wallet-selector/core": "^7.3.0",
     "@near-wallet-selector/here-wallet": "^7.3.0",
@@ -26,7 +30,9 @@
     "@near-wallet-selector/near-wallet": "^7.3.0",
     "@near-wallet-selector/nightly": "^7.3.0",
     "@near-wallet-selector/sender": "^7.3.0",
-    "fetch": "^1.1.0",
-    "node-fetch": "^3.3.0"
+    "bn.js": "^5.2.1",
+    "crypto-js": "^4.1.1",
+    "near-api-js": "^0.44.2",
+    "uuid4": "^2.0.3"
   }
 }
