--- a/.pugrc
+++ b/.pugrc
@@ -26,7 +26,9 @@
           "icon": "/assets/Socials/near.svg",
           "link": "https://awesomenear.com/here-wallet"
         }
-      ]
+      ],
+      "partnership": "Apply for partnership",
+      "partnershipLink": "https://e7n60nzwwu5.typeform.com/to/SpEcBKVo"
     },
     "header": {
       "waitlistLocale": "Android waiting list",
