New URL and some fixed in table

--- a/.pugrc
+++ b/.pugrc
@@ -60,7 +60,7 @@
           "link": "https://docs.herewallet.app/technology-description/readme"
         },
         {
-          "text": "Binance status",
+          "text": "Binance waitlist",
           "link": "/binance-status"
         }
       ],
