Fix Validation and Background-color

--- a/.pugrc
+++ b/.pugrc
@@ -61,7 +61,7 @@
         },
         {
           "text": "Binance waitlist",
-          "link": "/binance-status"
+          "link": "/binance-waitlist"
         }
       ],
       "downloads": [
