--- a/.pugrc
+++ b/.pugrc
@@ -151,22 +151,22 @@
       "title": "The latest news HERE",
       "items": [
         {
-          "header": "Tonic DEX",
-          "text": "Now you can buy and sell FT on DEX right HERE! 💸🤝. We have the cheapest exchange fees thanks to our partnership with @tonicdex and the use of orderbooks!",
-          "image": "https://pbs.twimg.com/media/FiruRUKUUAAJCCt?format=jpg&name=4096x4096",
-          "url": "https://twitter.com/here_wallet/status/1597351046396801024"
+          "header": "🆕 Binance connect is available on the waiting list!",
+          "text": "😶‍🌫️ Every day we give access to 10 top users from waiting list (by score) and after connect they win 4 USDT!\n+50 unlocks for retweet\n👇Join the waiting list 👇 ",
+          "image": "https://pbs.twimg.com/media/Fvozq-ZaUAEf3Lh?format=jpg&name=large",
+          "url": "https://medium.com/@nearhere/here-binance-connect-and-earn-4-aab88341fe1e"
         },
         {
-          "header": "App CLip is live",
-          "text": "Now you can create a wallet instantly without installing the app. It is enough to scan the QR code.",
-          "image": "https://pbs.twimg.com/media/Fi-BYeBXEAM3cgA?format=jpg&name=large",
-          "url": "https://twitter.com/here_wallet/status/1598642291886940161"
+          "header": "What gives a HERE score?",
+          "text": "Let's break it down:",
+          "image": "https://pbs.twimg.com/media/FutFsXJXwAM0MOz?format=jpg&name=4096x4096",
+          "url": "https://medium.com/@nearhere/here-score-29ce3537e225"
         },
         {
-          "header": "How to use NEAR on your phone",
-          "text": "Available to (L)Earn on 6 (six) languages!",
-          "image": "https://pbs.twimg.com/media/FiaqY4sWAAEo3bX?format=jpg&name=large",
-          "url": "https://twitter.com/LearnNear/status/1596151053736722435"
+          "header": "We have a new support team 🦸🤝",
+          "text": "> create chat with the team on Discord > text in iMessage > message us on telegram\n👀 If we do not respond within 30 minutes you will receive a universal prize for a cup of coffee",
+          "image": "https://pbs.twimg.com/media/FuRNVCuaEAANUBL?format=jpg&name=large",
+          "url": "https://twitter.com/here_wallet/status/1649529660873785344"
         }
       ]
     },
