--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "fetch": "node ./fetch-data.js",
     "deploy": "rm -rf description && npm run build && sh ./deploy.sh",
     "build": "parcel build ./binance-waitlist/index.pug ./binance-status/index.pug ./nft/index.pug ./landing/index.pug ./santa/index.pug ./gifts/index.pug",
-    "start": "parcel ./binance-waitlist/index.pug ./binance-status/index.pug ./nft/index.pug ./landing/index.pug ./santa/index.pug ./gifts/index.pug"
+    "start": "parcel ./stream/index.pug "
   },
   "type": "module",
   "devDependencies": {
