--- a/.pugrc
+++ b/.pugrc
@@ -151,22 +151,22 @@
       "title": "The latest news HERE",
       "items": [
         {
-          "header": "🆕 Binance connect is available on the waiting list!",
-          "text": "😶‍🌫️ Every day we give access to 10 top users from waiting list (by score) and after connect they win 4 USDT!\n+50 unlocks for retweet\n👇Join the waiting list 👇 ",
-          "image": "https://storage.herewallet.app/Fvozq-ZaUAEf3Lh.jpeg",
-          "url": "https://medium.com/@nearhere/here-binance-connect-and-earn-4-aab88341fe1e"
+          "header": "🆕 Check new explorer",
+          "text": "😶 Tracking transactions on NEAR has never been more convenient",
+          "image": "https://storage.herewallet.app/media/1.png",
+          "url": "https://t.me/herewallet/187"
         },
         {
           "header": "What gives a HERE score?",
-          "text": "Let's break it down:",
-          "image": "https://storage.herewallet.app/FutFsXJXwAM0MOz.jpeg",
+          "text": "Let's break it down:\n🔥 cashback for swaps\n⚡️ gasless transactions\n🐹 special emoji",
+          "image": "https://pbs.twimg.com/media/FutFsXJXwAM0MOz?format=jpg&name=4096x4096",
           "url": "https://medium.com/@nearhere/here-score-29ce3537e225"
         },
         {
-          "header": "We have a new support team 🦸🤝",
-          "text": "> create chat with the team on Discord > text in iMessage > message us on telegram\n👀 If we do not respond within 30 minutes you will receive a universal prize for a cup of coffee",
-          "image": "https://storage.herewallet.app/FuRNVCuaEAANUBL.jpeg",
-          "url": "https://twitter.com/here_wallet/status/1649529660873785344"
+          "header": "Binance swaps inside!",
+          "text": "🆕 Make swap on your Binance account via HERE Wallet\n ⚡️ It is easy and always in your pocket\n💰 Best rate between liquid swap and Binance orderbook\n✅ Swap available without VPN everywhere",
+          "image": "https://storage.herewallet.app/media/3.png",
+          "url": "https://t.me/herewallet/185"
         }
       ]
     },
