--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
     "fetch": "node ./fetch-data.js",
-    "deploy": "rm -rf description && npm run build && sh ./deploy.sh",
-    "build": "parcel build ./binance-waitlist/index.pug ./binance-status/index.pug ./nft/index.pug ./landing/index.pug ./santa/index.pug ./gifts/index.pug",
-    "start": "parcel ./stream/index.pug "
+    "deploy": "npm run build && sh ./deploy.sh",
+    "build": "parcel build ./stream/index.pug ./binance-waitlist/index.pug ./binance-status/index.pug ./nft/index.pug ./landing/index.pug ./santa/index.pug ./gifts/index.pug",
+    "start": "parcel ./stream/index.pug ./binance-waitlist/index.pug ./binance-status/index.pug ./nft/index.pug ./landing/index.pug ./santa/index.pug ./gifts/index.pug"
   },
   "type": "module",
   "devDependencies": {
