--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,7 @@ jobs:
     - name: SCP files
       run: |
         scp -o StrictHostKeyChecking=no -r ./howto/* fedor@web.herewallet.app:/var/www/here/www/howto
-        scp -o StrictHostKeyChecking=no -r ./stemmy/* fedor@web.herewallet.app:/var/www/here/www/stemmy
         scp -o StrictHostKeyChecking=no -r ./privacypolicy/* fedor@web.herewallet.app:/var/www/here/www/privacypolicy
         scp -o StrictHostKeyChecking=no -r ./nft/* fedor@web.herewallet.app:/var/www/here/www/nft
         scp -o StrictHostKeyChecking=no -r ./dist/* fedor@web.herewallet.app:/var/www/here/www
-        scp -o StrictHostKeyChecking=no -r ./dist/landing/* fedor@web.herewallet.app:/var/www/here/www/landing
+        scp -o StrictHostKeyChecking=no -r ./dist/landing/* fedor@web.herewallet.app:/var/www/here/www
