--- a/.pugrc
+++ b/.pugrc
@@ -4,6 +4,7 @@
       "logoLight": "/assets/logo.light.svg",
       "logoDark": "/assets/logo.svg",
       "supportEmail": "support@herewallet.app",
+      "mailto": "mailto:support@herewallet.app",
       "termsLocale": "Privacy policy and Terms of Service",
       "termsLink": "/privacypolicy",
       "appStore": "https://appstore.herewallet.app/site",
@@ -58,10 +59,6 @@
         {
           "text": "Docs",
           "link": "https://docs.herewallet.app/technology-description/readme"
-        },
-        {
-          "text": "Binance waitlist",
-          "link": "/binance-waitlist"
         }
       ],
       "downloads": [
@@ -72,9 +69,9 @@
       ]
     },
     "main": {
-      "title": "Start using",
-      "subTitle": "Stop holding",
-      "textTitle": "Join the waitlist to use onchain staking, games, DeFi directly from Binance balance",
+      "title": "Make Binance",
+      "subTitle": "Safe and simple",
+      "textTitle": "Keep money safe and use Binance via HERE app when you really need it",
       "qrcode": "/assets/QR/qr.gold.svg",
       "qrcodeLocale": "Scan to start HERE",
       "poweredbynear": "Powered by NEAR Protocol",
@@ -100,50 +97,51 @@
     },
     "features": [
       {
-        "title": "Advanced analytics made simple",
+        "title": "More safety",
         "moreLink": "https://appstore.herewallet.app/site",
         "moreLocale": "Try it out",
         "backPicture": "/assets/Screens/features-bg.svg",
         "frontPicture": [
-          "/assets/sliders/1-1.png",
-          "/assets/sliders/1-2.png",
-          "/assets/sliders/1-3.png",
-          "/assets/sliders/1-4.png"
+          "/assets/sliders/1-1news.png",
+          "/assets/sliders/1-2news.png",
+          "/assets/sliders/1-3news.png"
         ],
         "items": [
-          "Portfolio change and distribution",
-          "24h change graph",
-          "Top grow, Top fall",
-          "News"
+          "Keep seed phrase localy",
+          "Deposit money to Binance only when you need it",
+          "No more blockages or restrictions"
         ]
       },
       {
-        "title": "On-chain Binance",
+        "title": "More profit",
         "moreLink": "https://appstore.herewallet.app/site",
         "moreLocale": "Try it out",
         "backPicture": "/assets/Screens/features-bg.svg",
         "frontPicture": [
           "/assets/sliders/2-1.png",
-          "/assets/sliders/2-2.png"
+          "/assets/sliders/2-2.png",
+          "/assets/sliders/2-3.png"
         ],
         "items": [
-          "Stake NEAR flexible at 9.5%",
-          "Explore advanced analytics",
-          "Explore dApps of your ecosystem"
+          "0% staking fees",
+          "Get cashback for swaps via HERE",
+          "Gas-free payments between friends"
         ]
       },
       {
-        "title": "Up to 9.5% APY with instant withdrawal",
+        "title": "More fancy",
         "moreLink": "https://appstore.herewallet.app/site",
         "moreLocale": "Try it out",
         "backPicture": "/assets/Screens/features-bg.svg",
         "frontPicture": [
           "/assets/sliders/3-1.png",
-          "/assets/sliders/3-2.png"
+          "/assets/sliders/3-2.png",
+          "/assets/sliders/3-3.png"
         ],
         "items": [
-          "Withdraw money at any time with 0% commission",
-          "Use only decentralized protocols to make profit"
+          "Earn social score for payments",
+          "Unlock features for your friends",
+          "Flex your NFTS and portfolio"
         ]
       }
     ],
@@ -151,20 +149,20 @@
       "title": "The latest news HERE",
       "items": [
         {
-          "header": "🆕 Check new explorer",
-          "text": "😶 Tracking transactions on NEAR has never been more convenient",
+          "header": "Zelle season 2 recap",
+          "text": "😶🏆 Congratulations to the winners and all who participated. It's been a hot season!\n\n We will take a break to prepare a new one, but soon we will launch new activities inside the app!\n\n Winners 👇",
           "image": "https://storage.herewallet.app/media/1.png",
           "url": "https://t.me/herewallet/187"
         },
         {
           "header": "What gives a HERE score?",
-          "text": "Let's break it down:\n🔥 cashback for swaps\n⚡️ gasless transactions\n🐹 special emoji",
+          "text": "Let's break it down:\n 🔥 cashback for swaps\n ⚡️ gasless transactions\n 🐹 special emoji",
           "image": "https://pbs.twimg.com/media/FutFsXJXwAM0MOz?format=jpg&name=4096x4096",
           "url": "https://medium.com/@nearhere/here-score-29ce3537e225"
         },
         {
           "header": "Binance swaps inside!",
-          "text": "🆕 Make swap on your Binance account via HERE Wallet\n ⚡️ It is easy and always in your pocket\n💰 Best rate between liquid swap and Binance orderbook\n✅ Swap available without VPN everywhere",
+          "text": "🆕 Make swap on your Binance account via HERE Wallet\n ⚡️ It is easy and always in your pocket\n 💰 Best rate between liquid swap and Binance orderbook\n ✅ Swap available without VPN everywhere",
           "image": "https://storage.herewallet.app/media/3.png",
           "url": "https://t.me/herewallet/185"
         }
@@ -237,25 +235,25 @@
       }
     ],
     "security": {
-      "title": "Securely store your money HERE",
+      "title": "Security is HERE",
       "headline": "We keep your assets safe",
-      "text": "HERE Wallet is an open source non-custodial wallet which have passed security audit, don’t have KYC, main features are made on smart contracts and all data is encrypted.",
+      "text": "HERE Wallet is an open source self-custodial wallet - all your private keys storage on your device and encrypted. Audited by OtterSec.",
       "moreLocale": "More about security",
       "moreLink": "https://docs.herewallet.app/technology-description/readme/security",
       "socials": [
         {
-          "icon": "/assets/Socials/near.svg",
-          "link": "https://awesomenear.com/here-wallet"
-        },
-        {
           "icon": "/assets/Socials/github.svg",
           "link": "https://github.com/here-wallet"
+        },
+        {
+          "icon": "/assets/Socials/near.svg",
+          "link": "https://awesomenear.com/here-wallet"
         }
       ]
     },
     "download": {
       "title": "Download app",
-      "text": "<span>Download HERE</span> and let<br/>it be your alternative<br/>to usual banking",
+      "text": "<span>Download HERE</span> and<br/>explore web3 safely and comfortably",
       "qrcode": "/assets/QR/qr.black.svg",
       "picture": "/assets/Screens/screens.png",
       "iosLink": "https://appstore.herewallet.app/site",
@@ -270,19 +268,43 @@
       "title": "In case you missed anything",
       "items": [
         {
+          "title": "What is Binance connect?",
+          "text": "The idea is to use money from the balance of the exchange onchain. When you connect Binance, you create an api key that lets you quickly move assets between the exchange and your crypto wallet. Now you can remove fees from staking, use dApps, and store money safely. And at the same time use the exchange for cheap swaps and withdrawals to fiat."
+        },
+        {
           "title": "How to deposit/withdraw money in HERE Wallet?",
-          "text": [
-            "You can deposit/withdraw money in any cryptocurrency using card or Binance. Balance in HERE is USDC stablecoin, so you can withdraw it any way you are used to.",
-            "You can withdraw money to a Binance account or to a bank account. We partnered with Mercuryo to provide withdrawals to fiat with minimal fees."
-          ]
+          "text": "You can deposit/withdraw money in any cryptocurrency using card or Binance. Balance in HERE is USDC stablecoin, so you can withdraw it any way you are used to. You can withdraw money to a Binance account or to a bank account."
         },
         {
           "title": "How long does it take to withdraw money?",
           "text": "We do not block funds and withdraw them within 3-5 seconds after verification. Withdrawal to Binance usually takes one minute, withdrawal to a bank account takes about 12 hours, in rare cases up to three days."
         },
         {
+          "title": "Is Binance connect safe?",
+          "text": "We have prepared an article that explains why Binance connect is safe. Take a look: ",
+          "link": "https://medium.com/@nearhere/binance-connect-security-5193df4ce0c3"
+        },
+        {
+          "title": "Why should I connect Binance?",
+          "text": [
+            "Stake onchain with a freeze of 3 days instead of 120 days on Binance",
+            "If Binance goes bankrupt as FTX, you keep your money",
+            "You don't pay commissions for using dApps and you do it without intermediaries",
+            "The first 1,000 users to make a deep Binance connection (not view only) will receive 4 USDT"
+          ]
+        },
+        {
           "title": "How to cash out money from the wallet?",
           "text": "You can cash out using your nearest USDC exchanger for fiat currency."
+        },
+        {
+          "title": "How can I report bugs?",
+          "text": "You can send bugs to our support in telegram (t.me/heresupport) or to our discord channel ",
+          "link": "https://discord.com/channels/996424467628703836/1098134885538996254"
+        },
+        {
+          "title": "Can I change my seed phrase?",
+          "text": "Yes. You can change your seed phrase. Go to settings -> passphrase -> generate new passphrase"
         }
       ]
     },
@@ -291,23 +313,30 @@
       "items": [
         {
           "title": "What is Binance connect?",
-          "text": [
-            "The idea is to use money from the balance of the exchange onchain. When you connect Binance, you create an api key that lets you quickly move assets between the exchange and your crypto wallet. Now you can remove fees from staking, use dApps, and store money safely. And at the same time use the exchange for cheap swaps and withdrawals to fiat."
-          ]
+          "text": "The idea is to use money from the balance of the exchange onchain. When you connect Binance, you create an api key that lets you quickly move assets between the exchange and your crypto wallet. Now you can remove fees from staking, use dApps, and store money safely. And at the same time use the exchange for cheap swaps and withdrawals to fiat."
         },
         {
           "title": "Is Binance connect safe?",
-          "text": "We have prepared an article that explains why Binance connect is safe. Take a look: <a href=\"https://medium.com/@nearhere/binance-connect-security-5193df4ce0c3\" target=\"_blank\">https://medium.com/@nearhere/binance-connect-security-5193df4ce0c3</a>"
+          "text": "We have prepared an article that explains why Binance connect is safe. Take a look: ",
+          "link": "https://medium.com/@nearhere/binance-connect-security-5193df4ce0c3"
         },
         {
           "title": "Why should I connect Binance?",
           "text": [
-            "<ul class=\"ask-list\"><li>Stake onchain with a freeze of 3 days instead of 120 days on Binance</li><li>If Binance goes bankrupt as FTX, you keep your money</li><li>You don't pay commissions for using dApps and you do it without intermediaries</li><li>The first 1,000 users to make a deep Binance connection (not view only) will receive 4 USDT</li></ul>"
+            "Stake onchain with a freeze of 3 days instead of 120 days on Binance",
+            "If Binance goes bankrupt as FTX, you keep your money",
+            "You don't pay commissions for using dApps and you do it without intermediaries",
+            "The first 1,000 users to make a deep Binance connection (not view only) will receive 4 USDT"
           ]
         },
         {
           "title": "How can I report bugs?",
-          "text": "You can send bugs to our support in telegram (<a href=\"https://t.me/heresupport\" target=\"_blank\">t.me/heresupport</a>) or to our discord channel (<a href=\"https://discord.com/channels/996424467628703836/1098134885538996254\" target=\"_blank\">https://discord.com/channels/996424467628703836/1098134885538996254</a>)"
+          "text": "You can send bugs to our support in telegram (t.me/heresupport) or to our discord channel ",
+          "link": "https://discord.com/channels/996424467628703836/1098134885538996254"
+        },
+        {
+          "title": "Can I change my seed phrase?",
+          "text": "Yes. You can change your seed phrase. Go to settings -> passphrase -> generate new passphrase"
         }
       ]
     }
