bug with images

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "markdown-it": "^13.0.1",
     "markdown-it-front-matter": "^0.2.3",
     "near-api-js": "^0.44.2",
+    "remarkable": "^2.0.1",
+    "sass": "^1.64.1",
     "uuid4": "^2.0.3"
   }
 }
