--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Install dependencies
       run: yarn install
 
+    - name: Build articles
+      run: node blog-builder.js
+
     - name: Build
       run: yarn build
 
