--- a/.pugrc
+++ b/.pugrc
@@ -352,7 +352,7 @@
         "text": "Using Binance in the US without a VPN might seem challenging, but with the integration of Binance and the HERE Wallet app, you can conveniently access and manage your cryptocurrencies.",
         "timeToRead": "2 min",
         "date": "03.08.2023",
-        "href": "article_1"
+        "href": "how-to-use-binance-with-no-vpn"
       },
       {
         "title": "HERE NFT Mutations",
@@ -361,7 +361,7 @@
         "text": "99 mutation potions are available. Each potion has the power to transform a single HERE Early user NFT, providing a once-in-a-lifetime opportunity",
         "timeToRead": "5 min",
         "date": "01.08.2023",
-        "href": "here-nft-mutations-4d9259b146a5"
+        "href": "here-nft-mutations"
       },
       {
         "title": "10000 NFTS Giveaway 🍾",
@@ -370,7 +370,7 @@
         "text": "After adding web wallet account exports, we launched a small giveaway",
         "timeToRead": "2 min",
         "date": "25.07.2023",
-        "href": "10000-nfts-giveaway-7e1d8c53eb6d"
+        "href": "10000-nfts-giveaway"
       },
       {
         "title": "Binance connect. Security. 🔒",
@@ -379,7 +379,7 @@
         "text": "To prevent loss or freezing funds we take a lot of security measures. In this article, will discuss the main of them.",
         "timeToRead": "5 min",
         "date": "03.07.2023",
-        "href": "binance-connect-security-5193df4ce0c3"
+        "href": "binance-connect-security"
       },
       {
         "title": "Gas-free transactions on NEAR Protocol",
@@ -388,7 +388,7 @@
         "text": "Gas fees represent the charge that users must pay for processing their transactions on the blockchain. But what if there was a way to do transactions without paying for gas?",
         "timeToRead": "5 min",
         "date": "03.07.2023",
-        "href": "gas-free-transactions-on-near-protocol-2cfba7bfa4b3"
+        "href": "gas-free-transactions-on-near-protocol"
       },
       {
         "title": "HERE Wallet and BANYAN are NEAR-SNAP maintainers",
@@ -397,7 +397,7 @@
         "text": "MetaMask has awarded a grant to HERE Wallet and BANYAN. The funding is specifically earmarked for the development of NEAR-SNAP",
         "timeToRead": "3 min",
         "date": "15.06.2023",
-        "href": "here-wallet-and-banyan-are-near-snap-maintainers-67e883699dea"
+        "href": "here-wallet-and-banyan-are-near-snap-maintainers"
       },
       {
         "title": "HERE: Score",
@@ -406,7 +406,7 @@
         "text": "In this article, we’ll explain in detail what SCORE is, how to get it, and why you need it",
         "timeToRead": "3 min",
         "date": "03.06.2023",
-        "href": "here-score-29ce3537e225"
+        "href": "here-score"
       },
       {
         "title": "How to use NEAR on Mobile",
@@ -415,7 +415,7 @@
         "text": "A breakdown of how to use the NEAR ecosystem from a cell phone",
         "timeToRead": "5 min",
         "date": "15.01.2023",
-        "href": "how-to-use-near-on-mobile-9f8be2e237c6"
+        "href": "how-to-use-near-on-mobile"
       }
     ]
   }
