--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   },
   "scripts": {
     "articles": "node blog-builder.js",
-    "build": "parcel build ./blog/*.html ./stream/index.pug ./binance-waitlist/index.pug ./nft/index.pug ./landing/index.pug ./blog/index.pug",
-    "parcel:watch": "parcel ./blog/*.html ./stream/index.pug ./binance-waitlist/index.pug ./nft/index.pug ./landing/index.pug ./blog/index.pug",
+    "build": "parcel build ./blog/*.html ./stream/index.pug ./binance-waitlist/index.pug ./nft/index.pug ./landing/index.pug ./blog/index.pug ./mint/index.pug",
+    "parcel:watch": "parcel ./blog/*.html ./stream/index.pug ./binance-waitlist/index.pug ./nft/index.pug ./landing/index.pug ./blog/index.pug ./mint/index.pug",
     "start": "concurrently --kill-others \"yarn parcel:watch\" \"npm-watch\""
   },
   "type": "commonjs",
