--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@types/uuid4": "^2.0.0",
     "buffer": "^5.7.1",
     "concurrently": "^8.2.0",
+    "crypto-browserify": "^3.12.0",
     "fetch": "^1.1.0",
     "node-fetch": "^3.3.0",
     "parcel": "^2.9.3",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0"
   },
   "dependencies": {
-    "@here-wallet/core": "^1.4.0",
+    "@here-wallet/core": "^1.5.0",
     "@near-wallet-selector/core": "^7.9.0",
     "@near-wallet-selector/here-wallet": "^7.9.0",
     "@near-wallet-selector/ledger": "^7.9.0",
